# Wrfte

./: .replit  bot.py  bot_data.db  bot_handlers.py  dashboard.py  db.py  main.py  pyproject.toml  replit.md  tts.py  user_prefs.json
templates/: index.html
